fix height on mobile devices

--- a/assets/style.css
+++ b/assets/style.css
@@ -2385,6 +2385,10 @@ html body main > #shopify-section-template--16099342483692__165780635347c7a11a .
     .section__collection_list #ProductGridContainer .collection.page-width .card__media>.media img {
         height: auto;
     }
+
+    .section__collection_list #ProductGridContainer .collection.page-width .card--standard.card--media .card__inner {
+        height: 330px;
+    }
     
   	.section__testimonials .col__right_testimonials.only__mobile {
     	display: block!important;
